   * Watchdog, restart hang threads (Dag Erlandsson)
   * Added ON_CAMERA_LOST event (Dag Erlandsson)
   * Motion start if a camera isn't there at start, retries to connect if lost (Dag Erlandsson)
   * Netcam Keepalive and HTTP/1.1 http://www.lavrsen.dk/twiki/bin/view/Motion/FeatureRequest2007x01x22x231542 
    (Simon Walls)
   * Added mov , Quicktime file format (Andrew Hamilton).

Bugfixes
   * Fixed a problem with locate and fixed mask overlay (Dag Erlandsson).
   * Preview pictures get the timestamp of moment they were captured (Dag Erlandsson).
   * Fixed http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2007x10x23x093651 (Angel Carpintero)
   * Fix process_id_file when is passed from command line (Angel Carpintero)
   * Fix http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2007x10x27x150419 (Angel Carpintero)
   * Fix http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2007x11x25x102808 (Angel Carpintero)
   * Avoid random errors , initialising some structs for V4L1 
     http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2007x11x26x010755 (Jason Sharpee & Angel Carpintero)
   * Fix motion segfaul because ffmpeg API change 
     http://www.lavrsen.dk/twiki/bin/view/Motion/SupportQuestion2007x12x29x175530 (Angel Carpintero)
   * Little fix in ffmpeg.c comparing version of LIBAVFORMAT_BUILD, since ffmpeg svn -r4486 LIBAVFORMAT_BUILD and
     LIBAVCODEC_BUILD uses LIBAVFORMAT_VERSION_INT ((49<<16)+(0<<8)+0) and LIBAVCODEC_VERSION_INT ((49<<16)+(0<<8)+0)
     (Angel Carpintero)	
   * Fix choose v4l2 palette , http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2008x01x21x043812	(Onakra)
   * Get current directory to allow write motion.conf properly 
     http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2008x02x25x013419 (John Bray) 
   * Fix broken PostgreSQL detection for custom location, 
     http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2008x02x25x025134 ( Angel Carpintero )